add get all flight
